# devops.overseer.extension.credentials-manager

./: .gitignore  pyproject.toml  requirements.dev.txt
.github/actions/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: ci.deploy.yml
scripts/: ci.deploy.build.bootstrap.sh
